--- a/style.css
+++ b/style.css
@@ -824,7 +824,7 @@ footer {
   display: grid;
   position: relative;
   width: 100%;
-  height: -200px;
+  height: 100px;
   background: #186f65;
   place-items: center;
 }
